# FAANG-COMPILER

./: .travis.yml  Cargo.toml  README.md
compiler/: .gitignore  Cargo.toml
compiler/src/: ast.rs  lib.rs  main.rs
compiler/src/compiler/: mod.rs  stdlib.rs
compiler/src/parser/: mod.rs  parser.lalrpop
language-server/: Cargo.toml
language-server/src/: main.rs
language-server/src/lsp/: codec.rs  mod.rs  stdio.rs
src/: ast.rs  main.rs  parser.lalrpop
src/compiler/: external.rs  util.rs
src/parser/: mod.rs  parser.lalrpop
vscode-ext/: .gitignore  package-lock.json  package.json  tsconfig.json  tslint.json
vscode-ext/src/: extension.ts
vscode-ext/syntaxes/: faang.tmLanguage.json
