[package]
name = "faang_language_server"
version = "0.1.0"
authors = ["Ryan Lee <drdgvhbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lsp-types = "0.61.0"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-stdin-stdout = "0.1"
tokio = "0.1"
jsonrpc-core = "13"
tokio-codec = "0.1"
jsonrpc-stdio-server = "13.2"
enum_primitive = "0.1.1"
serde_derive = "1.0.101"
url = "2.1.0"
bytes = "0.4"
stderrlog = "0.4"
log = "0.4"
lazy_static = "1.4"

[dev-dependencies]
pretty_assertions = "0.6"
